exports[`common/component/element/a should handle correct link to index page 1`] = `
<a
  className="c-link link-a"
  lang="de"
  onClick={[Function]}
  style={Object {}}
  tabIndex="0"
  title="Link title">
  Link Children
</a>
`;

exports[`common/component/element/a should handle correct link to relative page 1`] = `
<a
  className="c-link link-a"
  lang="de"
  onClick={[Function]}
  style={Object {}}
  tabIndex="0"
  title="Link title">
  Link Children
</a>
`;

exports[`common/component/element/a should render correctly 1`] = `
<a
  className="c-link link-a"
  href="testpage"
  lang="de"
  rel="noopener noreferrer"
  tabIndex="0"
  target="_blank"
  title="Link title">
  Link Children
</a>
`;

exports[`common/component/element/a should return null of there is no to attribute 1`] = `null`;
